fixed flex wrap on card container component

--- a/ClientApp/src/app/components/game-picker-control/game-picker-control.component.css
+++ b/ClientApp/src/app/components/game-picker-control/game-picker-control.component.css
@@ -8,8 +8,9 @@
 .game-card {
     display: block;
     width: 15rem;
+    height: 15rem;
     margin: 1rem;
-    padding: 0.5rem;
+    padding: 1rem;
     border: 1px solid black;
     border-radius: 4px;
     box-shadow: 0.1rem 0.1rem grey;
