--- a/ClientApp/src/app/components/game-picker/game-picker.component.css
+++ b/ClientApp/src/app/components/game-picker/game-picker.component.css
@@ -1,7 +1,7 @@
 .card-container {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 
